--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
        console.dir(date.getSeconds())
        console.dir(date.toDateString())
 
-       
+       let name = new String("Than Htwe Aung");
+       console.log(name)
     </script>
 </body>
 </html>
