--- a/date.html
+++ b/date.html
@@ -8,11 +8,9 @@
 </head>
 <body>
     <script>
-       let d = new Date();
-       d.setDate(28)
-       d.setMonth(11)
-      
-       console.log(d.toDateString())
+        let d = new Date()
+        d.setDate(5)
+        console.log(d.toDateString())
     </script>
 </body>
 </html>
