--- a/object.html
+++ b/object.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Date</title>
+    <title>Object</title>
 </head>
 <body>
     <script>
-       let d = new Date();
-       d.setDate(28)
-       d.setMonth(11)
-      
-       console.log(d.toDateString())
+        let me ={
+            name : "Than Htwe Aung",
+            age : 24,
+            job : "team leader",
+            hobby(){
+                return this.name + " intereste in hiking."
+            }
+        }
     </script>
 </body>
 </html>
