--- a/node_list_to_arr.html
+++ b/node_list_to_arr.html
@@ -12,6 +12,7 @@
     </style>
 </head>
 <body class="">
+    
     <!-- <ul>
         <li>Min</li>
         <li>Ga</li>
@@ -28,6 +29,9 @@
     </ul>
 
     <script>
+
+        let text ='{"name":"Than","age":23,"car":null}'
+        let fruits = ["apple","mango","banana","orange"]
         let ul = document.querySelectorAll("li")
 
         // ဂဏန်းအားလုံးကို ပေါင်းနည်း
